--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -32,7 +32,21 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import torch\n",
+    "from torch import nn, optim\n",
+    "from sklearn.impute import KNNImputer\n",
+    "from sympy import divisors\n",
+    "from scipy.stats import zscore\n",
+    "from sklearn.feature_selection import SelectKBest, RFECV, RFE, mutual_info_regression, f_regression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from torch.utils.data import DataLoader\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
+    "import optuna"
    ],
    "metadata": {
     "collapsed": false
@@ -268,8 +282,6 @@
   {
    "cell_type": "code",
    "source": [
-    "from sklearn.impute import KNNImputer\n",
-    "\n",
     "def fill_based_on(dataframe, date_unit='day'):\n",
     "    date_range = dataframe[date_unit].unique()\n",
     "    for date in date_range:\n",
@@ -315,8 +327,6 @@
   {
    "cell_type": "code",
    "source": [
-    "from sympy import divisors\n",
-    "\n",
     "def plot_boxplots():\n",
     "    for i, column_group in enumerate(starts_with):\n",
     "        similar_columns = [col for col in data.columns if col.startswith(column_group)]\n",
@@ -360,8 +370,6 @@
   {
    "cell_type": "code",
    "source": [
-    "from scipy.stats import zscore\n",
-    "\n",
     "def del_outliers(dataframe, ignore_down_range=True):\n",
     "    for column, zscore_range in ver.items():\n",
     "        vec, indexes = zscore(dataframe[column]), []\n",
@@ -411,9 +419,6 @@
   {
    "cell_type": "code",
    "source": [
-    "from sklearn.feature_selection import SelectKBest, RFECV, RFE, mutual_info_regression, f_regression\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "\n",
     "def plot_feature_importance(sc, num_of_features):\n",
     "    if isinstance(sc, RFECV) or isinstance(sc, RFE):\n",
     "        scores = dict(zip(sc.feature_names_in_, sc.ranking_))\n",
@@ -428,21 +433,6 @@
     "\n",
     "\n",
     "X, y = data.drop(['pm2_5'], axis=1), data['pm2_5']\n",
-    "k = 20\n",
-    "selector = RFECV(\n",
-    "    estimator=RandomForestRegressor(\n",
-    "        n_estimators=700, \n",
-    "        max_depth=7, \n",
-    "        random_state=4, \n",
-    "        n_jobs=-1, \n",
-    "        oob_score=True,\n",
-    "        warm_start=True,\n",
-    "    ),\n",
-    "    min_features_to_select=k, \n",
-    "    cv=10, \n",
-    "    scoring='neg_root_mean_squared_error',\n",
-    "    n_jobs=-1\n",
-    ")\n",
     "# selector = RFE(\n",
     "#     estimator=RandomForestRegressor(\n",
     "#         n_estimators=700, \n",
@@ -454,6 +444,21 @@
     "#     ),\n",
     "#     n_features_to_select=k,\n",
     "# )\n",
+    "k = 25\n",
+    "selector = RFECV(\n",
+    "    estimator=RandomForestRegressor(\n",
+    "        n_estimators=400, \n",
+    "        max_depth=10, \n",
+    "        random_state=4, \n",
+    "        n_jobs=-1, \n",
+    "        oob_score=True,\n",
+    "        warm_start=True,\n",
+    "    ),\n",
+    "    min_features_to_select=k, \n",
+    "    cv=10, \n",
+    "    scoring='neg_root_mean_squared_error',\n",
+    "    n_jobs=-1\n",
+    ")\n",
     "selector.fit(X, y)\n",
     "X, test = selector.transform(X), selector.transform(test)\n",
     "\n",
@@ -475,29 +480,6 @@
     "collapsed": false
    },
    "id": "a8b9be23efdbd904"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Potrzebne importy"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "eae50f8387e668ab"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
-    "from sklearn.model_selection import train_test_split"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "537a6c450bd1efa2",
-   "outputs": [],
-   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -551,30 +533,6 @@
     "collapsed": false
    },
    "id": "4ea367ef409a37a5"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Potrzebne importy"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b5e7b079774ede3e"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "from sklearn.neural_network import MLPRegressor\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import root_mean_squared_error"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5dc1a78b81969b11",
-   "outputs": [],
-   "execution_count": null
   },
   {
    "metadata": {},
@@ -640,29 +598,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Potrzebne importy"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f087e5cbcc23b0ae"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "import torch\n",
-    "from torch import nn, optim"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "498ea0f7dd22079c",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "### 1. Wybór karty graficznej do nauki modelu"
    ],
    "metadata": {
@@ -695,195 +630,180 @@
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
+   "source": "### 1.1 Optuna",
+   "id": "6784e54b9ac8486f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
-    "### 2. Architektura sieci neuronowej"
+    "def rmse_loss(y_true, y_pred):\n",
+    "    return torch.sqrt(torch.mean((y_true - y_pred) ** 2))\n",
+    "\n",
+    "def define_model(trial):\n",
+    "    n_layers = trial.suggest_int('n_layers', 2, 5)\n",
+    "    layers = []\n",
+    "    \n",
+    "    in_features = X_train_tensor.shape[1]\n",
+    "    for i in range(n_layers):\n",
+    "        out_features = trial.suggest_int(f'layer{i}', 25, 200)\n",
+    "        layers.append(nn.Linear(in_features, out_features))\n",
+    "        layers.append(nn.ReLU())\n",
+    "        p = trial.suggest_float(f'dropout{i}', 0, 0.4)\n",
+    "        layers.append(nn.Dropout(p))\n",
+    "        in_features = out_features\n",
+    "    layers.append(nn.Linear(in_features, 1))\n",
+    "    return nn.Sequential(*layers)\n",
+    "\n",
+    "def objective(trial):\n",
+    "    model = define_model(trial).to(device=device)\n",
+    "    lr = trial.suggest_float('lr', 1e-3, 1e-2, log=True)\n",
+    "    weight_decay = trial.suggest_float('weight_decay', 1e-5, 1e-4, log=True)\n",
+    "    betas = (trial.suggest_float('beta1', 0.8, 0.9, log=True), trial.suggest_float('beta2', 0.997, 0.999, log=True))\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=lr, weight_decay=weight_decay, betas=betas, fused=True)\n",
+    "    \n",
+    "    batch_size = trial.suggest_int('batch_size', 16, 416, step=25)\n",
+    "    criterion = rmse_loss\n",
+    "    epochs = trial.suggest_int('epochs', 100, 300, step=50)\n",
+    "    \n",
+    "    final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
+    "    \n",
+    "    for epoch in range(epochs):\n",
+    "        dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
+    "        epoch_loss = 0\n",
+    "        for batch_idx, batch in enumerate(dataset):\n",
+    "            inputs, targets = batch[:, :-1], batch[:, -1]\n",
+    "            batch_pred = model(inputs)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss = criterion(targets, batch_pred.squeeze())\n",
+    "            epoch_loss += loss.item()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "        trial.report(epoch_loss / len(dataset), epoch)\n",
+    "        if trial.should_prune():\n",
+    "            raise optuna.exceptions.TrialPruned()\n",
+    "        \n",
+    "    with torch.no_grad():\n",
+    "        y_pred = model(X_test_tensor).squeeze()\n",
+    "        \n",
+    "    return root_mean_squared_error(y_test, y_pred.numpy(force=True))\n",
+    "\n",
+    "study = optuna.create_study(\n",
+    "    direction='minimize',\n",
+    "    sampler=optuna.samplers.TPESampler(),\n",
+    "    study_name='AirQuality',\n",
+    ")\n",
+    "study.optimize(objective, n_trials=200)"
    ],
+   "id": "a612d991969930d6",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": "### Najlepsze parametry sieci neuronowej",
    "metadata": {
     "collapsed": false
    },
    "id": "aff1a14b2bea3818"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "class Net(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Net, self).__init__()\n",
-    "        self.layers = nn.Sequential(\n",
-    "            nn.Linear(X_train_tensor.shape[1], 101),\n",
-    "            nn.ELU(),\n",
-    "            nn.Dropout(p=0.2),\n",
-    "            nn.Linear(101, 245),\n",
-    "            nn.ELU(),\n",
-    "            nn.Dropout(p=0.2),\n",
-    "            nn.Linear(245, 65),\n",
-    "            nn.ELU(),\n",
-    "            nn.Linear(65, 1),\n",
-    "        )\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        return self.layers(x)\n",
-    "    \n",
-    "def rmse_loss(y_true, y_pred):\n",
-    "    return torch.sqrt(torch.mean((y_true - y_pred) ** 2))\n",
-    "\n",
-    "\n",
-    "model = Net().to(device=device)\n",
-    "criterion = rmse_loss\n",
-    "optimizer = optim.Adam(\n",
-    "    model.parameters(), \n",
-    "    lr=0.001, \n",
-    "    betas=(0.9, 0.999), \n",
-    "    eps=1e-8, \n",
-    "    weight_decay=1e-4, \n",
-    "    amsgrad=False, \n",
-    "    fused=True\n",
-    ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5bbca20bcc1becc8",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 3. Nauka sieci neuronowej na zbiorze treningowym"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "17f3f743712603d7"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "\n",
-    "model.train()\n",
-    "\n",
-    "batch_size = 32\n",
-    "epochs = 150\n",
-    "\n",
-    "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
-    "losses_for_each_batch = pd.DataFrame()\n",
-    "\n",
-    "for epoch in range(epochs):\n",
-    "    batch_rmse = np.array([])\n",
-    "    dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
-    "    for batch_idx, batch in enumerate(dataset):\n",
-    "        inputs, targets = batch[:, :-1], batch[:, -1]\n",
-    "        batch_pred = model(inputs)\n",
-    "        optimizer.zero_grad()\n",
-    "        loss = criterion(targets, batch_pred.squeeze())\n",
-    "        batch_rmse = np.append(batch_rmse, loss.item())\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "    if epoch == 0:\n",
-    "        losses_for_each_batch = pd.DataFrame({epoch: batch_rmse})\n",
-    "    else:\n",
-    "        losses_for_each_batch = pd.concat([losses_for_each_batch, pd.DataFrame({epoch: batch_rmse})], axis=1)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ee01653bc24ee293",
+   "source": "study.best_params",
+   "id": "9cfb05cde113e0af",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Dane z każdej epoki",
-   "id": "1aef17f50ac4745"
+   "source": "### Wykres przedstawiający każdy <i>trial</i> w procesie nauki",
+   "id": "7dd9e64e1b394237"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "def plot_loss(dataframe):\n",
-    "    df = dataframe.describe().drop(index=['count', 'std', '25%', '75%']).T\n",
-    "    fig, ax = plt.subplots(nrows=2, ncols=2, figsize=(10, 8))\n",
-    "    for i, column in enumerate(df.columns):\n",
-    "        x_cord, y_cord = divmod(i, 2)\n",
-    "        df[column].plot(kind='line', ax=ax[x_cord, y_cord])\n",
-    "        ax[x_cord, y_cord].set_title(column)\n",
-    "        if y_cord == 0:\n",
-    "            ax[x_cord, y_cord].set_ylabel('RMSE')\n",
-    "        if x_cord == 1:\n",
-    "            ax[x_cord, y_cord].set_xlabel('Epoch')\n",
-    "        ax[x_cord, y_cord].grid(True)\n",
-    "    plt.show()\n",
-    "    \n",
-    "plot_loss(losses_for_each_batch)"
-   ],
-   "id": "21d227eb4d3d2fa7",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": "### 4. Testowanie sieci neuronowej",
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2f4ae6f4bd5948ff"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "model.eval()\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    loss = criterion(y_test_tensor, model(X_test_tensor).squeeze())\n",
-    "    print(f'RMSE: {loss.item():.4f}')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f4907fe921715dfa",
+   "source": "optuna.visualization.plot_optimization_history(study)",
+   "id": "8f7608eef0ccc810",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Parametry modelu",
-   "id": "d509b50d8736fc70"
+   "source": "### Wizualizacja przekroju parametrów",
+   "id": "f9d8406114339ed0"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "print(\"Parametry modelu:\")\n",
-    "for param_tensor in model.state_dict():\n",
-    "    print(param_tensor, \"\\t\", model.state_dict()[param_tensor].size())\n",
-    "    \n",
-    "torch.save(model.state_dict(), 'model.pt')"
-   ],
-   "id": "c3a1775f64035a1a",
+   "source": "optuna.visualization.plot_slice(study, params=['lr', 'n_layers', 'weight_decay', 'beta1', 'beta2', 'epochs', 'batch_size'])",
+   "id": "8142b6308c8970fe",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "## <center>Do wysłania</center>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### Zależność parametrów w postaci wykresu konturowego",
+   "id": "6e8600ed39b005cd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "optuna.visualization.plot_contour(study, params=['lr', 'n_layers', 'beta1', 'beta2', 'epochs', 'batch_size'])",
+   "id": "2f4ffefa4dda681b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Wykres przedstawiający wielowymiarowe zależności parametrów",
+   "id": "ac781e5abf8585da"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "optuna.visualization.plot_parallel_coordinate(study, params=['lr', 'n_layers', 'beta1', 'beta2', 'epochs', 'batch_size'])",
+   "id": "bf78850a6ed46b32",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Historia optymalizacji parametrów na osi czasu",
+   "id": "85a51722879427ec"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "optuna.visualization.plot_timeline(study)",
+   "id": "df6f0912abade9f9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## <center>Do wysłania</center>",
    "id": "79bf1209e752a444"
   },
   {
    "cell_type": "code",
    "source": [
+    "best_model = define_model(study.best_trial)\n",
+    "best_model.to(device=device)\n",
+    "\n",
+    "best_model.eval()\n",
+    "\n",
     "with torch.no_grad():\n",
-    "    save_to_csv(model(test_tensor).squeeze().numpy(force=True), 'nn.csv')"
+    "    save_to_csv(best_model(test_tensor).squeeze().numpy(force=True), 'nn.csv')"
    ],
    "metadata": {
     "collapsed": false
