jest coraz lepiej

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -297,8 +297,8 @@
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
     "# imputers = [IterativeImputer() for _ in range(len(starts_with))]\n",
     "X, y = train.drop(['pm2_5'], axis=1), train['pm2_5']\n",
-    "X, test = drop_high_nans(X), drop_high_nans(test)\n",
-    "fill_train(), fill_test()\n",
+    "# X, test = drop_high_nans(X), drop_high_nans(test)\n",
+    "# fill_train(), fill_test()\n",
     "# to_drop = drop_high_correlated_columns()\n",
     "# X, test = X.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)"
    ],
@@ -675,17 +675,17 @@
     "def define_model(trial):\n",
     "    params = {\n",
     "        'objective': 'root_mean_squared_error',\n",
-    "        'boosting_type': trial.suggest_categorical('boosting_type', ['gbdt']),\n",
-    "        'num_leaves': trial.suggest_int('num_leaves', 2, 15),\n",
+    "        'boosting_type': 'gbdt',\n",
+    "        'num_leaves': trial.suggest_int('num_leaves', 2, 25),\n",
     "        'max_depth': trial.suggest_int('max_depth', 6, 20),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 1e-2, 5e-1),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-2, 2e-1),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
-    "        # 'tree_learner': trial.suggest_categorical('tree_learner', ['serial', 'feature', 'data', 'voting']),\n",
+    "        'tree_learner': trial.suggest_categorical('tree_learner', ['serial', 'feature', 'data', 'voting']),\n",
     "        # 'bagging_fraction': trial.suggest_float('bagging_fraction', 0.5, 0.9, log=True),\n",
     "        # 'feature_fraction': trial.suggest_float('feature_fraction', 0.7, 1, log=True),\n",
-    "        'subsample': trial.suggest_float('subsample', 0.05, 1),\n",
-    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.05, 1),\n",
-    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 1, 200),\n",
+    "        'subsample': trial.suggest_float('subsample', 0.5, 1),\n",
+    "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.3, 1),\n",
+    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 250),\n",
     "        'bagging_freq': 1,\n",
     "        'device': 'gpu',\n",
     "        'random_state': 4,\n",
@@ -702,7 +702,7 @@
     "\n",
     "study = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM')\n",
     "study.optimize(objective, n_trials=500)\n",
-    "model_params = ['boosting_type', 'num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf']"
+    "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf']"
    ],
    "id": "21e4f067899ca658",
    "outputs": [],
@@ -747,20 +747,6 @@
    "cell_type": "code",
    "source": "optuna.visualization.plot_parallel_coordinate(study, params=model_params)",
    "id": "bf78850a6ed46b32",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### Historia optymalizacji parametrów na osi czasu",
-   "id": "85a51722879427ec"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "optuna.visualization.plot_timeline(study)",
-   "id": "df6f0912abade9f9",
    "outputs": [],
    "execution_count": null
   },
