--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -32,18 +32,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.impute import KNNImputer\n",
-    "from sympy import divisors\n",
-    "from scipy.stats import zscore\n",
-    "from sklearn.feature_selection import RFECV, RFE, SelectKBest, mutual_info_regression, f_regression\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import root_mean_squared_error\n",
-    "import torch\n",
-    "from torch import nn, optim\n",
-    "from torch.utils.data import DataLoader\n",
-    "from sklearn.ensemble import RandomForestRegressor"
+    "import seaborn as sns"
    ],
    "metadata": {
     "collapsed": false
@@ -65,8 +54,8 @@
   {
    "cell_type": "code",
    "source": [
-    "train = pd.read_csv('data\\\\Train.csv')\n",
-    "test = pd.read_csv('data\\\\Test.csv')\n",
+    "train = pd.read_csv('data\\\\train.csv')\n",
+    "test = pd.read_csv('data\\\\test.csv')\n",
     "\n",
     "train.info()"
    ],
@@ -88,16 +77,13 @@
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### Rozbicie daty na składowe"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### Rozbicie daty na składowe",
    "id": "af49ecab4176ea4c"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "def change_date(dataframe):\n",
@@ -109,101 +95,74 @@
     "\n",
     "train, test = change_date(train), change_date(test)"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "96de3f55dc052fc9",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### Wykres przedstawiający jakość powietrza w krajach afrykańskich"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### Wykres przedstawiający jakość powietrza w krajach afrykańskich",
    "id": "cdbb93a09da5579d"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "sns.lineplot(data=train, x='date', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza z podziałem na kraje')"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "c080d74ffd38ea41",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### Wykres przedstawiający wartość pm2_5 w zarejestrowanych godzinach"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### Wykres przedstawiający wartość pm2_5 w zarejestrowanych godzinach",
    "id": "c18ec25179e58a3d"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "sns.barplot(data=train, x='hour', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza w poszczególnych godzinach z podziałem na kraje')"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "1cc187b6375c9eb4",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### Wykres przedstawiający wartość pm2_5 z zależności od dnia tygodnia"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### Wykres przedstawiający wartość pm2_5 z zależności od dnia tygodnia",
    "id": "e4b3fd78e799e096"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "sns.barplot(data=train, x='day', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "36c6ec9520527975",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### Wykres przedstawiający wartość pm2_5 z zależności od miesiąca"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### Wykres przedstawiający wartość pm2_5 z zależności od miesiąca",
    "id": "c018df974513e0e3"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "sns.barplot(data=train, x='month', y='pm2_5', hue='country')\n",
     "plt.title('Jakość powietrza w każdym dniu tygodnia z podziałem na kraje')"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "18b6234a9ec5ca95",
    "outputs": [],
    "execution_count": null
@@ -223,30 +182,23 @@
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "## <center>Czyszczenie danych</center>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "## <center>Czyszczenie danych</center>",
    "id": "ab3216061cba4b3a"
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### 1. Uzupełnienie wartości brakujących"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### 1. Uzupełnienie wartości brakujących",
    "id": "ba2f9b8e1bcb96ad"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from sklearn.experimental import enable_iterative_imputer\n",
-    "from sklearn.impute import IterativeImputer\n",
+    "from sklearn.impute import IterativeImputer, KNNImputer\n",
     "\n",
     "\n",
     "def fill_train(column_name='site_latitude'):\n",
@@ -297,31 +249,28 @@
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
     "# imputers = [IterativeImputer() for _ in range(len(starts_with))]\n",
     "X, y = train.drop(['pm2_5'], axis=1), train['pm2_5']\n",
-    "# X, test = drop_high_nans(X), drop_high_nans(test)\n",
+    "X, test = drop_high_nans(X), drop_high_nans(test)\n",
     "# fill_train(), fill_test()\n",
     "# to_drop = drop_high_correlated_columns()\n",
     "# X, test = X.drop(columns=to_drop, axis=1), test.drop(columns=to_drop, axis=1)"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "133fbc1ffe6ae43a",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### Wykresy pudełkowe wskazujące wartości odstające"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### Wykresy pudełkowe wskazujące wartości odstające",
    "id": "9af06f017aaea4c3"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
+    "from sympy import divisors\n",
+    "\n",
+    "\n",
     "def plot_boxplots():\n",
     "    for i, column_group in enumerate(starts_with):\n",
     "        similar_columns = [col for col in train.columns if col.startswith(column_group)]\n",
@@ -336,43 +285,40 @@
     "            for j, column in enumerate(similar_columns):\n",
     "                x_cord, y_cord = divmod(j, cols)\n",
     "                train[column].plot(kind='box', ax=ax[x_cord, y_cord], fontsize=15)\n",
-    "                # if column in ver.keys():\n",
-    "                #     ax[x_cord, y_cord].axhline(y=ver.get(column)[0] * train[column].std(), color='green', label='down-limit')\n",
-    "                #     ax[x_cord, y_cord].axhline(y=ver.get(column)[1] * train[column].std(), color='red', label='up-limit')\n",
-    "                #     ax[x_cord, y_cord].legend(loc='best')\n",
+    "                if column in ver.keys():\n",
+    "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[0] * train[column].std(), color='green', label='down-limit')\n",
+    "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[1] * train[column].std(), color='red', label='up-limit')\n",
+    "                    ax[x_cord, y_cord].legend(loc='best')\n",
     "            plt.show()\n",
     "\n",
     "\n",
     "vertical_columns = [col for col in X.columns if 'number_density' in col]\n",
-    "# ver = dict(zip(vertical_columns, [(-5 * X[column].std(), 5 * X[column].std()) for column in vertical_columns]))\n",
+    "ver = dict(zip(vertical_columns, [(-5 * X[column].std(), 5 * X[column].std()) for column in vertical_columns]))\n",
     "\n",
     "# plot_boxplots()"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "7901bc4c9d7d1412",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### 2. Usunięcie wartości odstających"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### 2. Usunięcie wartości odstających",
    "id": "a767724811d79e3c"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
+    "from scipy.stats import zscore\n",
+    "\n",
+    "\n",
     "def del_outliers():\n",
     "    for column in vertical_columns:\n",
     "        vec, indexes = zscore(X[column]), []\n",
     "        for j in range(len(vec)):\n",
-    "            if -5 < vec[j] > 5:\n",
+    "            if vec[j] > 5:\n",
     "                indexes.append(j)\n",
     "        X.drop(index=indexes, inplace=True)\n",
     "        y.drop(index=indexes, inplace=True)\n",
@@ -385,36 +331,32 @@
     "\n",
     "X.info()"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "1e31da0f18fee574",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": "X.head()",
-   "metadata": {
-    "collapsed": false
-   },
    "id": "3463da86e8af6bd7",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "## <center>Selekcja cech</center>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "## <center>Selekcja cech</center>",
    "id": "7a9161db0ea237c"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
+    "from sklearn.feature_selection import RFECV, RFE, SelectKBest, mutual_info_regression, f_regression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "\n",
     "def plot_feature_importance(sc, num_of_features):\n",
     "    if isinstance(sc, RFECV) or isinstance(sc, RFE):\n",
     "        scores = dict(zip(sc.feature_names_in_, sc.ranking_))\n",
@@ -460,62 +402,55 @@
     "# \n",
     "# plot_feature_importance(selector, k)"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "c002ded9461774c1",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "## <center>Transformacja danych</center>"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "## <center>Transformacja danych</center>",
    "id": "a8b9be23efdbd904"
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": "### 1. Wybór sposobu preprocessingu danych",
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### 1. Standaryzacja danych",
    "id": "22bf5b75d8429019"
   },
   {
+   "metadata": {},
    "cell_type": "code",
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "\n",
     "X = scaler.fit_transform(X, y)\n",
     "test = scaler.transform(test)"
    ],
-   "metadata": {
-    "collapsed": false
-   },
    "id": "376c12ae9287f590",
    "outputs": [],
    "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "source": [
-    "### 2. Podział na zbiór testowy i treningowy"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
+   "source": "### 2. Podział na zbiór walidacyjny i treningowy",
    "id": "5c70912092f074e4"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)",
-   "metadata": {
-    "collapsed": false
-   },
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)\n",
+    "X_train = pd.DataFrame(X_train, columns=scaler.feature_names_in_)\n",
+    "X_test = pd.DataFrame(X_test, columns=scaler.feature_names_in_)"
+   ],
    "id": "683541f15475f393",
    "outputs": [],
    "execution_count": null
@@ -549,16 +484,8 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### <center>PyTorch</center>",
-   "id": "d8bd09cb2fae5106"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 1. Wybór karty graficznej do nauki modelu"
-   ],
+   "source": "### Wybór karty graficznej dla PyTorcha",
    "metadata": {
     "collapsed": false
    },
@@ -567,6 +494,11 @@
   {
    "cell_type": "code",
    "source": [
+    "import torch\n",
+    "from torch import nn, optim\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "\n",
     "# device = (\n",
     "#     'cuda'\n",
     "#     if torch.cuda.is_available()\n",
@@ -591,7 +523,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### 1.1 Optuna",
+   "source": "### Optuna + Pytorch",
    "id": "6784e54b9ac8486f"
   },
   {
@@ -667,30 +599,36 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Optuna + lightGBM",
+   "id": "f1951123b5b3569"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import lightgbm as lgb\n",
     "import optuna\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
     "def define_model(trial):\n",
     "    params = {\n",
     "        'objective': 'root_mean_squared_error',\n",
     "        'boosting_type': 'gbdt',\n",
-    "        'num_leaves': trial.suggest_int('num_leaves', 2, 25),\n",
+    "        'num_leaves': trial.suggest_int('num_leaves', 2, 40),\n",
     "        'max_depth': trial.suggest_int('max_depth', 6, 20),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 1e-2, 2e-1),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 5e-2),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': trial.suggest_categorical('tree_learner', ['serial', 'feature', 'data', 'voting']),\n",
-    "        # 'bagging_fraction': trial.suggest_float('bagging_fraction', 0.5, 0.9, log=True),\n",
-    "        # 'feature_fraction': trial.suggest_float('feature_fraction', 0.7, 1, log=True),\n",
+    "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.5, 0.9),\n",
+    "        # 'feature_fraction': trial.suggest_float('feature_fraction', 0.5, 1),\n",
     "        'subsample': trial.suggest_float('subsample', 0.5, 1),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.3, 1),\n",
-    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 250),\n",
+    "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
     "        'bagging_freq': 1,\n",
     "        'device': 'gpu',\n",
     "        'random_state': 4,\n",
-    "        'verbosity': -1,\n",
-    "        # 'extra_trees': True,\n",
+    "        'verbosity': -1\n",
     "    }\n",
     "    return lgb.LGBMRegressor(**params)\n",
     "\n",
@@ -701,10 +639,27 @@
     "    return root_mean_squared_error(y_test, y_pred)\n",
     "\n",
     "study = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM')\n",
-    "study.optimize(objective, n_trials=500)\n",
-    "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf']"
+    "study.optimize(objective, n_trials=500)"
    ],
    "id": "21e4f067899ca658",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Zdefiniowanie modelu",
+   "id": "54ba4a369bf8c70b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "best_model = define_model(study.best_trial)\n",
+    "best_model.fit(X_train, y_train)\n",
+    "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction', 'tree_learner']"
+   ],
+   "id": "d068d85105ef8d8",
    "outputs": [],
    "execution_count": null
   },
@@ -739,16 +694,22 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Wykres przedstawiający wielowymiarowe zależności parametrów",
-   "id": "ac781e5abf8585da"
+   "source": "### Wpływ poszczególnych parametrów na proces nauki modelu",
+   "id": "b7670a4a8c62b011"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "optuna.visualization.plot_parallel_coordinate(study, params=model_params)",
-   "id": "bf78850a6ed46b32",
+   "source": "optuna.visualization.plot_param_importances(study)",
+   "id": "6594be3641ad58f2",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Najlepsze parametry",
+   "id": "a81fee2426d0cc68"
   },
   {
    "metadata": {},
@@ -761,10 +722,45 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "### Znaczenie poszczególnych kolumn",
+   "id": "a7b518453e312064"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "lgb.plot_importance(best_model, precision=2, figsize=(20, 12), dpi=200, orientation='vertical')",
+   "id": "5a463c177c2dea71",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Drzewo decyzyjne",
+   "id": "3aa3b24cd053a042"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "lgb.plot_tree(best_model, precision=2, figsize=(20, 12), show_info=['split_gain', 'data_percentage'], dpi=200, orientation='vertical')",
+   "id": "bd6ab8ed5c9e4833",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "## <center>Do wysłania</center>",
    "id": "79bf1209e752a444"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Pytorch",
+   "id": "f8dbc488d410fc79"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# best_model = define_model(study.best_trial)\n",
@@ -773,15 +769,22 @@
     "# best_model.eval()\n",
     "# \n",
     "# with torch.no_grad():\n",
-    "#     save_to_csv(best_model(test_tensor).squeeze().numpy(force=True), 'nn.csv')\n",
-    "\n",
-    "best_model = define_model(study.best_trial)\n",
-    "best_model.fit(X_train, y_train)\n",
-    "save_to_csv(best_model.predict(test), 'lightgbm.csv')"
+    "#     save_to_csv(best_model(test_tensor).squeeze().numpy(force=True), 'nn.csv')"
    ],
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "701718bf3900dab9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### lightGBM",
+   "id": "b18a5c8404b9bf18"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "save_to_csv(best_model.predict(test), 'lightgbm.csv')",
    "id": "74ce5044d06598de",
    "outputs": [],
    "execution_count": null
@@ -793,6 +796,7 @@
     "<ol>\n",
     "    <li>The 15km SO2 band is ingested only when solar_zenith_angle < 70.</li>\n",
     "    <li>Because of noise on the data, negative vertical column values are often observed in particular over clean regions or for low SO2 emissions. It is recommended not to filter these values except for outliers, i.e. for vertical columns lower than -0.001 mol/m^2.</li>\n",
+    "    <li>The effective cloud fraction is the radiometric equivalent cloud fraction of a satellite pixel assuming a fixed cloud albedo, usually 0.8. By definition the effective cloud fraction times the assumed cloud albedo plus the cloud-free surface and atmosphere contributions yields a TOA reflectance that agrees with the observed TOA reflectance.</li>\n",
     "</ol>"
    ],
    "metadata": {
