--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -32,7 +32,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from lightgbm import LGBMRegressor"
    ],
    "metadata": {
     "collapsed": false
@@ -428,6 +429,7 @@
     "scaler = StandardScaler()\n",
     "\n",
     "X = scaler.fit_transform(X, y)\n",
+    "X = pd.DataFrame(X, columns=scaler.feature_names_in_)\n",
     "test = scaler.transform(test)"
    ],
    "id": "376c12ae9287f590",
@@ -619,14 +621,15 @@
     "        'max_depth': trial.suggest_int('max_depth', 6, 20),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 5e-2),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
-    "        'tree_learner': trial.suggest_categorical('tree_learner', ['serial', 'feature', 'data', 'voting']),\n",
+    "        'tree_learner': 'voting',\n",
     "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.5, 0.9),\n",
     "        # 'feature_fraction': trial.suggest_float('feature_fraction', 0.5, 1),\n",
     "        'subsample': trial.suggest_float('subsample', 0.5, 1),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.3, 1),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
     "        'bagging_freq': 1,\n",
-    "        'device': 'gpu',\n",
+    "        'device': 'cpu',\n",
+    "        'n_jobs': -1,\n",
     "        'random_state': 4,\n",
     "        'verbosity': -1\n",
     "    }\n",
@@ -655,9 +658,27 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# params_12 =  {'num_leaves': 25, \n",
+    "#            'max_depth': 15, \n",
+    "#            'learning_rate': 0.01982093884782807, \n",
+    "#            'n_estimators': 1042, \n",
+    "#            'tree_learner': 'voting', \n",
+    "#            'bagging_fraction': 0.863457680863147, \n",
+    "#            'subsample': 0.8572357579881347, \n",
+    "#            'colsample_bytree': 0.8692866219741755, \n",
+    "#            'min_data_in_leaf': 57,\n",
+    "#            'bagging_freq': 1,\n",
+    "#             'device': 'cpu',\n",
+    "#             'n_jobs': -1,\n",
+    "#             'random_state': 4,\n",
+    "#             'verbosity': -1,\n",
+    "#            'objective': 'root_mean_squared_error',\n",
+    "#             'boosting_type': 'gbdt',\n",
+    "#            }\n",
+    "# best_model = LGBMRegressor(**params_12)\n",
+    "# best_model.fit(X, y)\n",
     "best_model = define_model(study.best_trial)\n",
-    "best_model.fit(X_train, y_train)\n",
-    "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction', 'tree_learner']"
+    "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction']"
    ],
    "id": "d068d85105ef8d8",
    "outputs": [],
@@ -728,7 +749,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "lgb.plot_importance(best_model, precision=2, figsize=(20, 12), dpi=200, orientation='vertical')",
+   "source": "lgb.plot_importance(best_model, figsize=(20, 12), dpi=200)",
    "id": "5a463c177c2dea71",
    "outputs": [],
    "execution_count": null
@@ -742,7 +763,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "lgb.plot_tree(best_model, precision=2, figsize=(20, 12), show_info=['split_gain', 'data_percentage'], dpi=200, orientation='vertical')",
+   "source": "lgb.plot_tree(best_model, precision=2, figsize=(20, 12), show_info=['data_percentage'], dpi=200, orientation='vertical')",
    "id": "bd6ab8ed5c9e4833",
    "outputs": [],
    "execution_count": null
@@ -803,6 +824,30 @@
     "collapsed": false
    },
    "id": "d2128d77bca7e777"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "res = pd.merge(X_train.loc[X_train['cloud_surface_albedo'].notna(), ['cloud_surface_albedo', 'site_latitude', 'site_longitude']], pd.DataFrame(y_train, columns=['pm2_5']), left_index=True, right_index=True)",
+   "id": "c173e014195b060b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sns.scatterplot(data=res, x='cloud_surface_albedo', y='pm2_5', hue='site_longitude')",
+   "id": "31ac5d32f0ed0c7b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sns.scatterplot(data=res, x='cloud_surface_albedo', y='pm2_5', hue='site_latitude')",
+   "id": "68bc8289f0008a71",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
