trening na calosci

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -32,8 +32,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from lightgbm import LGBMRegressor"
+    "import seaborn as sns"
    ],
    "metadata": {
     "collapsed": false
@@ -676,8 +675,8 @@
     "#             'boosting_type': 'gbdt',\n",
     "#            }\n",
     "# best_model = LGBMRegressor(**params_12)\n",
-    "# best_model.fit(X, y)\n",
     "best_model = define_model(study.best_trial)\n",
+    "best_model.fit(X, y)\n",
     "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction']"
    ],
    "id": "d068d85105ef8d8",
