testowanie lasu ponownie

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -88,8 +88,9 @@
    "source": [
     "def change_date(dataframe):\n",
     "    dataframe['date'] = pd.to_datetime(dataframe['date'])\n",
-    "    dataframe['day'] = dataframe['date'].dt.dayofweek.astype(np.int64)\n",
-    "    dataframe['month'] = dataframe['month'].astype(np.int64)\n",
+    "    dataframe['day'] = dataframe['date'].dt.dayofweek.astype('category')\n",
+    "    dataframe['month'] = dataframe['month'].astype('category')\n",
+    "    dataframe['hour'] = dataframe['hour'].astype('category')\n",
     "    return dataframe\n",
     "\n",
     "\n",
@@ -176,7 +177,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.heatmap(train[['month', 'day', 'hour', 'site_latitude', 'site_longitude', 'pm2_5']].corr(), annot=True, cmap='Greys')",
+   "source": "sns.heatmap(train[['month', 'day', 'hour', 'site_latitude', 'site_longitude', 'cloud_surface_albedo', 'pm2_5']].corr(), annot=True, cmap='Greys')",
    "id": "e9964e42a6e9e51f",
    "outputs": [],
    "execution_count": null
@@ -236,7 +237,7 @@
     "def drop_high_correlated_columns():\n",
     "    matrix = X.corr(numeric_only=True).abs()\n",
     "    upper_t = matrix.where(np.triu(np.ones_like(matrix, dtype=np.bool_), k=1))\n",
-    "    return [col for col in upper_t.columns if any(upper_t[col] > 0.9)]\n",
+    "    return [col for col in upper_t.columns if any(upper_t[col] > 0.99)]\n",
     "\n",
     "\n",
     "test_ids = test['id']\n",
@@ -315,23 +316,25 @@
     "\n",
     "\n",
     "def del_outliers():\n",
-    "    for column in vertical_columns:\n",
-    "        vec, indexes = zscore(X[column]), []\n",
-    "        for j in range(len(vec)):\n",
-    "            if vec[j] > 5:\n",
-    "                indexes.append(j)\n",
-    "        X.drop(index=indexes, inplace=True)\n",
-    "        y.drop(index=indexes, inplace=True)\n",
-    "        X.reset_index(drop=True, inplace=True)\n",
-    "        y.reset_index(drop=True, inplace=True)\n",
-    "    return X\n",
+    "    zscores = zscore(X.select_dtypes(exclude='category').values, nan_policy='omit')\n",
+    "    np.nan_to_num(zscores, copy=False)\n",
+    "    zscores = np.absolute(zscores)\n",
+    "    result = np.median(zscores, axis=1)\n",
+    "    indexes_to_drop = []\n",
+    "    for i, el in enumerate(result):\n",
+    "        if el >= np.quantile(result, 0.995):\n",
+    "            indexes_to_drop.append(i)\n",
+    "    X.drop(indexes_to_drop, inplace=True)\n",
+    "    y.drop(indexes_to_drop, inplace=True)\n",
+    "    X.reset_index(drop=True, inplace=True)\n",
+    "    y.reset_index(drop=True, inplace=True)\n",
     "\n",
     "\n",
-    "# X = del_outliers()\n",
+    "# del_outliers()\n",
     "\n",
     "X.info()"
    ],
-   "id": "1e31da0f18fee574",
+   "id": "e6ed493315daf808",
    "outputs": [],
    "execution_count": null
   },
@@ -339,7 +342,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": "X.head()",
-   "id": "3463da86e8af6bd7",
+   "id": "1e31da0f18fee574",
    "outputs": [],
    "execution_count": null
   },
@@ -423,13 +426,23 @@
    "cell_type": "code",
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.compose import make_column_transformer\n",
     "\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "X = scaler.fit_transform(X, y)\n",
-    "X = pd.DataFrame(X, columns=scaler.feature_names_in_)\n",
-    "test = scaler.transform(test)"
+    "# Bez kategorycznych\n",
+    "# scale_columns = X.columns.difference(['hour', 'month', 'day'])\n",
+    "# \n",
+    "# scaler = make_column_transformer((StandardScaler(), scale_columns))\n",
+    "# \n",
+    "# X_cat, test_cat = X[['hour', 'month', 'day']], test[['hour', 'month', 'day']]\n",
+    "# \n",
+    "# X = pd.concat([pd.DataFrame(scaler.fit_transform(X[scale_columns]), columns=scaler.feature_names_in_), X_cat], axis=1)\n",
+    "# test = pd.concat([pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
+    "# Wszyskie kolumny\n",
+    "# scaler = StandardScaler()\n",
+    "# \n",
+    "# X = scaler.fit_transform(X, y)\n",
+    "# X = pd.DataFrame(X, columns=scaler.feature_names_in_)\n",
+    "# test = scaler.transform(test)"
    ],
    "id": "376c12ae9287f590",
    "outputs": [],
@@ -449,8 +462,8 @@
     "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)\n",
-    "X_train = pd.DataFrame(X_train, columns=scaler.feature_names_in_)\n",
-    "X_test = pd.DataFrame(X_test, columns=scaler.feature_names_in_)"
+    "X_train = pd.DataFrame(X_train, columns=X.columns)\n",
+    "X_test = pd.DataFrame(X_test, columns=X.columns)"
    ],
    "id": "683541f15475f393",
    "outputs": [],
@@ -601,7 +614,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Optuna + lightGBM",
+   "source": "### <center>Optuna + lightGBM</center>",
    "id": "f1951123b5b3569"
   },
   {
@@ -612,13 +625,13 @@
     "import optuna\n",
     "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
-    "def define_model(trial):\n",
+    "def define_lightgbm_model(trial):\n",
     "    params = {\n",
     "        'objective': 'root_mean_squared_error',\n",
     "        'boosting_type': 'gbdt',\n",
-    "        'num_leaves': trial.suggest_int('num_leaves', 2, 40),\n",
-    "        'max_depth': trial.suggest_int('max_depth', 6, 20),\n",
-    "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 5e-2),\n",
+    "        'num_leaves': trial.suggest_int('num_leaves', 2, 50),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 15, 25),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 8e-3, 5e-2),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': 'voting',\n",
     "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.5, 0.9),\n",
@@ -626,6 +639,7 @@
     "        'subsample': trial.suggest_float('subsample', 0.5, 1),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.3, 1),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
+    "        'min_gain_to_split': trial.suggest_float('min_gain_to_split', 1e-8, 1, log=True),\n",
     "        'bagging_freq': 1,\n",
     "        'device': 'cpu',\n",
     "        'n_jobs': -1,\n",
@@ -634,14 +648,14 @@
     "    }\n",
     "    return lgb.LGBMRegressor(**params)\n",
     "\n",
-    "def objective(trial):\n",
-    "    lgbm = define_model(trial)\n",
-    "    lgbm.fit(X_train, y_train)\n",
-    "    y_pred = lgbm.predict(X_test)\n",
+    "def objective_lightgbm(trial):\n",
+    "    model = define_lightgbm_model(trial)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
     "    return root_mean_squared_error(y_test, y_pred)\n",
     "\n",
-    "study = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM')\n",
-    "study.optimize(objective, n_trials=500)"
+    "study = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler(seed=0))\n",
+    "# study.optimize(objective_lightgbm, n_trials=500)"
    ],
    "id": "21e4f067899ca658",
    "outputs": [],
@@ -650,36 +664,44 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Zdefiniowanie modelu",
+   "source": "### Zdefiniowanie najlepszego lightgbm",
    "id": "54ba4a369bf8c70b"
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# params_12 =  {'num_leaves': 25, \n",
-    "#            'max_depth': 15, \n",
-    "#            'learning_rate': 0.01982093884782807, \n",
-    "#            'n_estimators': 1042, \n",
-    "#            'tree_learner': 'voting', \n",
-    "#            'bagging_fraction': 0.863457680863147, \n",
-    "#            'subsample': 0.8572357579881347, \n",
-    "#            'colsample_bytree': 0.8692866219741755, \n",
-    "#            'min_data_in_leaf': 57,\n",
-    "#            'bagging_freq': 1,\n",
-    "#             'device': 'cpu',\n",
-    "#             'n_jobs': -1,\n",
-    "#             'random_state': 4,\n",
-    "#             'verbosity': -1,\n",
-    "#            'objective': 'root_mean_squared_error',\n",
-    "#             'boosting_type': 'gbdt',\n",
-    "#            }\n",
-    "# best_model = LGBMRegressor(**params_12)\n",
-    "best_model = define_model(study.best_trial)\n",
-    "best_model.fit(X, y)\n",
+    "params_12 =  {'num_leaves': 25, \n",
+    "           'max_depth': 15, \n",
+    "           'learning_rate': 0.01982093884782807, \n",
+    "           'n_estimators': 1042, \n",
+    "           'tree_learner': 'voting', \n",
+    "           'bagging_fraction': 0.863457680863147, \n",
+    "           'subsample': 0.8572357579881347, \n",
+    "           'colsample_bytree': 0.8692866219741755, \n",
+    "           'min_data_in_leaf': 57,\n",
+    "           'bagging_freq': 1,\n",
+    "            'device': 'cpu',\n",
+    "            'n_jobs': -1,\n",
+    "            'random_state': 4,\n",
+    "            'verbosity': -1,\n",
+    "           'objective': 'root_mean_squared_error',\n",
+    "            'boosting_type': 'gbdt',\n",
+    "           }\n",
+    "lgbm = lgb.LGBMRegressor(**params_12)\n",
+    "# best_model = define_lightgbm_model(study.best_trial)\n",
+    "lgbm.fit(X_train, y_train)\n",
     "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction']"
    ],
    "id": "d068d85105ef8d8",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "root_mean_squared_error(y_test, lgbm.predict(X_test))",
+   "id": "cd0b3f5d0214f227",
    "outputs": [],
    "execution_count": null
   },
@@ -748,7 +770,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "lgb.plot_importance(best_model, figsize=(20, 12), dpi=200)",
+   "source": "lgb.plot_importance(lgbm, figsize=(20, 12), dpi=200)",
    "id": "5a463c177c2dea71",
    "outputs": [],
    "execution_count": null
@@ -762,8 +784,70 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "lgb.plot_tree(best_model, precision=2, figsize=(20, 12), show_info=['data_percentage'], dpi=200, orientation='vertical')",
+   "source": "lgb.plot_tree(lgbm, precision=2, figsize=(20, 12), show_info=['data_percentage'], dpi=200, orientation='vertical')",
    "id": "bd6ab8ed5c9e4833",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### <center>Optuna + RandomForestRegressor</center>",
+   "id": "ec02be0608d9aff4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def define_rfr_model(trial):\n",
+    "    params = {\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 50, 200),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 2, 25),\n",
+    "        'min_samples_split': trial.suggest_int('min_samples_split', 2, 10),\n",
+    "        'min_samples_leaf': trial.suggest_int('min_samples_leaf', 2, 10),\n",
+    "        'bootstrap': trial.suggest_categorical('bootstrap', [True]),\n",
+    "        'oob_score': trial.suggest_categorical('oob_score', [True, False]),\n",
+    "        'warm_start': trial.suggest_categorical('warm_start', [True, False]),\n",
+    "        'random_state': 4,\n",
+    "        'n_jobs': -1,\n",
+    "    }\n",
+    "    return RandomForestRegressor(**params)\n",
+    "\n",
+    "def objective_rfr(trial):\n",
+    "    model = define_rfr_model(trial)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    return root_mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "study = optuna.create_study(direction='minimize', study_name='AirQualityWithRandomForestRegressor', sampler=optuna.samplers.TPESampler(seed=0))\n",
+    "study.optimize(objective_rfr, n_trials=100)"
+   ],
+   "id": "dec6fe41d008823",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Zdefiniowanie najlepszego RandomForestRegressor",
+   "id": "5ac159f7995c8fa3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "rfr = define_rfr_model(study.best_trial)\n",
+    "rfr.fit(X_train, y_train)"
+   ],
+   "id": "7014455ebd0fe1fb",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "root_mean_squared_error(y_test, rfr.predict(X_test))",
+   "id": "ebac26f4a1b5aadf",
    "outputs": [],
    "execution_count": null
   },
@@ -804,8 +888,22 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "save_to_csv(best_model.predict(test), 'lightgbm.csv')",
+   "source": "save_to_csv(lgbm.predict(test), 'lightgbm.csv')",
    "id": "74ce5044d06598de",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### RandomForestRegressor",
+   "id": "d60e353a6810059b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "save_to_csv(rfr.predict(test), 'rfr.csv')",
+   "id": "2293fbf00cd34490",
    "outputs": [],
    "execution_count": null
   },
@@ -823,30 +921,6 @@
     "collapsed": false
    },
    "id": "d2128d77bca7e777"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "res = pd.merge(X_train.loc[X_train['cloud_surface_albedo'].notna(), ['cloud_surface_albedo', 'site_latitude', 'site_longitude']], pd.DataFrame(y_train, columns=['pm2_5']), left_index=True, right_index=True)",
-   "id": "c173e014195b060b",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "sns.scatterplot(data=res, x='cloud_surface_albedo', y='pm2_5', hue='site_longitude')",
-   "id": "31ac5d32f0ed0c7b",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "sns.scatterplot(data=res, x='cloud_surface_albedo', y='pm2_5', hue='site_latitude')",
-   "id": "68bc8289f0008a71",
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
