--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -319,10 +319,11 @@
     "    zscores = zscore(X.select_dtypes(exclude='category').values, nan_policy='omit')\n",
     "    np.nan_to_num(zscores, copy=False)\n",
     "    zscores = np.absolute(zscores)\n",
-    "    result = np.median(zscores, axis=1)\n",
+    "    result = np.mean(zscores, axis=1)\n",
     "    indexes_to_drop = []\n",
+    "    q1, q2 = np.quantile(result, 0.005), np.quantile(result, 0.995)\n",
     "    for i, el in enumerate(result):\n",
-    "        if el >= np.quantile(result, 0.995):\n",
+    "        if q1 <= el >= q2:\n",
     "            indexes_to_drop.append(i)\n",
     "    X.drop(indexes_to_drop, inplace=True)\n",
     "    y.drop(indexes_to_drop, inplace=True)\n",
@@ -438,11 +439,11 @@
     "# X = pd.concat([pd.DataFrame(scaler.fit_transform(X[scale_columns]), columns=scaler.feature_names_in_), X_cat], axis=1)\n",
     "# test = pd.concat([pd.DataFrame(scaler.transform(test[scale_columns]), columns=scaler.feature_names_in_), test_cat], axis=1)\n",
     "# Wszyskie kolumny\n",
-    "# scaler = StandardScaler()\n",
-    "# \n",
-    "# X = scaler.fit_transform(X, y)\n",
-    "# X = pd.DataFrame(X, columns=scaler.feature_names_in_)\n",
-    "# test = scaler.transform(test)"
+    "scaler = StandardScaler()\n",
+    "\n",
+    "X = scaler.fit_transform(X, y)\n",
+    "X = pd.DataFrame(X, columns=scaler.feature_names_in_)\n",
+    "test = scaler.transform(test)"
    ],
    "id": "376c12ae9287f590",
    "outputs": [],
@@ -801,7 +802,7 @@
    "source": [
     "def define_rfr_model(trial):\n",
     "    params = {\n",
-    "        'n_estimators': trial.suggest_int('n_estimators', 50, 200),\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 50, 700),\n",
     "        'max_depth': trial.suggest_int('max_depth', 2, 25),\n",
     "        'min_samples_split': trial.suggest_int('min_samples_split', 2, 10),\n",
     "        'min_samples_leaf': trial.suggest_int('min_samples_leaf', 2, 10),\n",
