--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -636,7 +636,6 @@
     "        'n_estimators': trial.suggest_int('n_estimators', 900, 1100),\n",
     "        'tree_learner': 'voting',\n",
     "        'bagging_fraction': trial.suggest_float('bagging_fraction', 0.5, 0.9),\n",
-    "        # 'feature_fraction': trial.suggest_float('feature_fraction', 0.5, 1),\n",
     "        'subsample': trial.suggest_float('subsample', 0.5, 1),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.3, 1),\n",
     "        'min_data_in_leaf': trial.suggest_int('min_data_in_leaf', 50, 150),\n",
@@ -656,7 +655,7 @@
     "    return root_mean_squared_error(y_test, y_pred)\n",
     "\n",
     "study = optuna.create_study(direction='minimize', study_name='AirQualityWithLightGBM', sampler=optuna.samplers.TPESampler(seed=0))\n",
-    "# study.optimize(objective_lightgbm, n_trials=500)"
+    "study.optimize(objective_lightgbm, n_trials=500)"
    ],
    "id": "21e4f067899ca658",
    "outputs": [],
@@ -689,8 +688,8 @@
     "           'objective': 'root_mean_squared_error',\n",
     "            'boosting_type': 'gbdt',\n",
     "           }\n",
-    "lgbm = lgb.LGBMRegressor(**params_12)\n",
-    "# best_model = define_lightgbm_model(study.best_trial)\n",
+    "# lgbm = lgb.LGBMRegressor(**params_12)\n",
+    "lgbm = define_lightgbm_model(study.best_trial)\n",
     "lgbm.fit(X_train, y_train)\n",
     "model_params = ['num_leaves', 'max_depth', 'learning_rate', 'n_estimators', 'subsample', 'colsample_bytree', 'min_data_in_leaf', 'bagging_fraction']"
    ],
